--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-dependencies = ["safetensors", "torch", "numpy"]
+dependencies = ["safetensors", "numpy"]
 
 [project.optional-dependencies]
 dev = ["pre-commit"]
