--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = ["safetensors", "numpy"]
 
 [project.optional-dependencies]
 dev = ["pre-commit"]
-tests = ["pytest"]
+tests = ["pytest", "ml-mixins", "loguru", "torch", "rootutils", "hydra-core", "humanize"]
 
 [project.urls]
 Homepage = "https://github.com/mmcdermott/nested_ragged_tensors"
