--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "nested_ragged_tensors"
-version = "0.0.6"
+dynamic = ["version"]
 authors = [
   { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
 ]
@@ -18,9 +18,12 @@ classifiers = [
 ]
 dependencies = ["safetensors", "numpy"]
 
+[tool.setuptools_scm]
+
 [project.optional-dependencies]
 dev = ["pre-commit"]
-tests = ["pytest", "ml-mixins", "loguru", "torch", "rootutils", "hydra-core", "humanize", "pytest-cov"]
+tests = ["pytest", "pytest-cov"]
+performance_testing = ["ml-mixins", "loguru", "torch", "rootutils", "hydra-core", "humanize"]
 
 [project.urls]
 Homepage = "https://github.com/mmcdermott/nested_ragged_tensors"
