Added starter code for better sample data generation and benchmarking.

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,7 @@ cython_debug/
 #.idea/
 
 performance_tests_outputs/
+sample_dataset/*.log
+sample_dataset/memray_stats.json
+sample_dataset/.memray
+sample_dataset/.hydra/*
