--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,7 @@ dependencies = ["safetensors", "numpy"]
 [project.optional-dependencies]
 dev = ["pre-commit"]
 tests = ["pytest", "pytest-cov"]
-benchmarks = [
-  "ml-mixins", "loguru", "torch", "rootutils", "hydra-core", "humanize", "memray",
-]
+benchmarks = ["ml-mixins", "torch", "rootutils", "memray"]
 
 [project.urls]
 Homepage = "https://github.com/mmcdermott/nested_ragged_tensors"
