--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install packages
         run: |
-          pip install -e .[tests,benchmark]
+          pip install -e .[tests,benchmarks]
           pip install sample_dataset_builder/
 
       - name: Run benchmark
