--- a/.github/workflows/code-quality-main.yaml
+++ b/.github/workflows/code-quality-main.yaml
@@ -18,5 +18,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
 
+      - name: Install packages
+        run: |
+          pip install -e .[dev]
+
       - name: Run pre-commits
         uses: pre-commit/action@v3.0.1
