--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -46,3 +46,7 @@ jobs:
         uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Check README code snippets
+        run: |
+          python -m doctest README.md
